Bug 358840 - kmail composer: menu item "send" missing
Summary: kmail composer: menu item "send" missing
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 5.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-31 20:39 UTC by Christian Boltz
Modified: 2016-02-28 07:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Boltz 2016-01-31 20:39:29 UTC
In KMail 4.x, the "messages" menu in the composer had the following menu items:

- send email
- send email with [transport submenu]
- send later
- send later with [transport submenu]

In KMail 5.1.1, the "send email" menu item is missing, so you can't send a mail now with the default transport. 

The workaround is to use the toolbar or the keyboard shortcut, but I'd like to have the menu entry back ;-)
Comment 1 Laurent Montel 2016-02-01 07:14:45 UTC
Git commit 9e3989b0c37e3b869e9cf77f0d8339f98c80993b by Montel Laurent.
Committed on 01/02/2016 at 07:14.
Pushed by mlaurent into branch 'Applications/15.12'.

Fix Bug 358840 - kmail composer: menu item "send" missing

FIXED-IN: 5.1.2

M  +2    -2    kmail/editor/kmcomposewin.cpp

http://commits.kde.org/kdepim/9e3989b0c37e3b869e9cf77f0d8339f98c80993b
Comment 2 Christian Boltz 2016-02-27 21:54:07 UTC
The menu entry is back in KMail 5.1.2 :-)  - thanks!

However it has a slightly strange name: it's named "E-Mail mit Kurzbefehlen versenden" ("send mail with shortcuts") - and I wonder if the "mit Kurzbefehlen" / "with shortcuts" part was intentional.
Comment 3 Laurent Montel 2016-02-28 07:29:43 UTC
Git commit 278e261bc3a7016de16489ca6a132bbcba1dbb2f by Montel Laurent.
Committed on 28/02/2016 at 07:29.
Pushed by mlaurent into branch 'Applications/15.12'.

Remove this unused action. Fix action name

M  +0    -4    kmail/editor/kmcomposewin.cpp

http://commits.kde.org/kdepim/278e261bc3a7016de16489ca6a132bbcba1dbb2f
Comment 4 Laurent Montel 2016-02-28 07:29:57 UTC
Indeed name was not correct