Fix Bug 358840 - kmail composer: menu item "send" missing

FIXED-IN: 5.1.2
BUG: 358840